--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -1,21 +1,58 @@
-#container {
-    padding-top: 50px;
-}
-@media (max-width: 767px) {
-    #container {
-        padding-top: 120px;
-    }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-#loading-screen {
-    width: 100%;
-    margin-left: 40%;
-    margin-top: 10%;
-    font-size: 5em;
+html {
+  font-family: 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback';
+  font-size: 14px;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: transparent;
 }
-.not-found{
-    width: 100%;
-    margin-left: 40%;
-    margin-top: 10%;
-    font-size: 8em;
+
+@-ms-viewport {
+  width: device-width;
+}
+
+article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
+  display: block;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #C5C5C5;
+  text-align: left;
+  background-color: #1E1E1E;
+}
+
+.align-center {
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: center;
+}
+
+.control {
+  color: #ADADAD;
+  background-color: #333333;  
+}
+.active {
+  color: #ADADAD;
+  background-color: #242425;
+}
+
+#main-area {
+  position: absolute;
+  left: 0px;
+  top: 0px;  
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
