--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -41,18 +41,13 @@ body {
 
 .control {
   color: #ADADAD;
-  background-color: #333333;  
+  background-color: #333333;
 }
 .active {
   color: #ADADAD;
   background-color: #242425;
 }
 
-#main-area {
-  position: absolute;
-  left: 0px;
-  top: 0px;  
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+.splitter-h {
+  cursor: ew-resize;
 }
