--- a/src/sqlcode/wwwroot/css/icons.css
+++ b/src/sqlcode/wwwroot/css/icons.css
@@ -9,7 +9,6 @@
   font-family: "icons";
   font-style: normal;
   font-weight: normal;
-  speak: none;
  
   display: inline-block;
   text-decoration: inherit;
@@ -43,4 +42,5 @@
 .icon-doc:before { content: '\e800'; } /* '' */
 .icon-search:before { content: '\e801'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
+.icon-terminal:before { content: '\f120'; } /* '' */
 .icon-database:before { content: '\f1c0'; } /* '' */
