--- a/src/sqlcode/wwwroot/css/toolbar.css
+++ b/src/sqlcode/wwwroot/css/toolbar.css
@@ -6,15 +6,14 @@
     height: 100%;
     font-size: 28px;
     padding-top: 10px;
-    padding-left: 3px;
 }
-.tbarBtn {
+.btn {
     cursor: pointer
 }
-.tbarBtn:hover {
+.btn:hover {
     color: white
 }
-.bottomBtn {
+.bottom {
     position: absolute;
     bottom: 24px;
     width: 100%;
