--- a/src/sqlcode/wwwroot/app/layout/main.html
+++ b/src/sqlcode/wwwroot/app/layout/main.html
@@ -1,13 +1,13 @@
 ${this.template.import("text!layout/toolbar.html")}
-<div class="" id="main">
+<div class="sc-container">
 
-    <div id="left">
+    <div class="sc-left-pane">
         explorer
     </div>
     
-    <div class="control" id="split"></div>
+    <div class="control sc-split"></div>
 
-    <div id="right">
+    <div class="sc-right-pane">
         tabz
     </div>
 
