--- a/src/sqlcode/wwwroot/app/templates/main.html
+++ b/src/sqlcode/wwwroot/app/templates/main.html
@@ -9,3 +9,15 @@
         <div class="btn align-center icon-menu"></div>
     </div>
 </div>
+
+<div class="sc-container">
+    <div class="sc-left-pane">
+        explorer
+    </div>
+    <div class="control sc-split"></div>
+    <div class="sc-right-pane">
+        tabz
+    </div>
+</div>
+
+<div id="footer"></div>
