--- a/src/sqlcode/wwwroot/css/toolbar.css
+++ b/src/sqlcode/wwwroot/css/toolbar.css
@@ -13,6 +13,11 @@
 }
 .btn:hover {
     color: white;
+    text-shadow: 0 0 1px
+}
+.btn.active {
+    color: white;
+    text-shadow: 0 0 1px
 }
 .bottom {
     position: absolute;
