--- a/src/sqlcode/wwwroot/app/templates/main.html
+++ b/src/sqlcode/wwwroot/app/templates/main.html
@@ -12,7 +12,14 @@
 
 <div class="sc-container">
     <div class="sc-left-pane">
-        explorer
+        
+        <div class="panel">scripts explorer
+
+        </div>
+        
+        <div style="display: none;">database explorer</div>
+        <div style="display: none;">search</div>
+
     </div>
     <div class="control sc-split"></div>
     <div class="sc-right-pane">
