--- a/src/sqlcode/wwwroot/app/templates/main.html
+++ b/src/sqlcode/wwwroot/app/templates/main.html
@@ -1,7 +1,7 @@
 <div id="toolbar" class="control">
     <div>
-        <div class="btn align-center icon-doc" id="doc"></div>
-        <div class="btn align-center icon-database" id="database"></div>
+        <div class="btn align-center icon-doc" id="docs"></div>
+        <div class="btn align-center icon-database" id="db"></div>
         <div class="btn align-center icon-search" id="search"></div>
     </div>
     <div class="bottom">
@@ -13,12 +13,9 @@
 <div class="sc-container">
     <div class="sc-left-pane" name="lpane">
         
-        <div class="panel">scripts explorer
-
-        </div>
-        
-        <div style="display: none;">database explorer</div>
-        <div style="display: none;">search</div>
+        <div class="panel docs-panel">scripts explorer</div>
+        <div class="panel db-panel" style="display: none;">database explorer</div>
+        <div class="panel search-panel" style="display: none;">search</div>
 
     </div>
 
