--- a/src/sqlcode/wwwroot/app/templates/main.html
+++ b/src/sqlcode/wwwroot/app/templates/main.html
@@ -14,8 +14,8 @@
     <div class="sc-left-pane" name="lpane">
         
         <div class="panel docs-panel">scripts explorer</div>
-        <div class="panel db-panel" style="display: none;">database explorer</div>
-        <div class="panel search-panel" style="display: none;">search</div>
+        <div class="panel db-panel">database explorer</div>
+        <div class="panel search-panel">search</div>
 
     </div>
 
