--- a/src/sqlcode/wwwroot/app/templates/main.html
+++ b/src/sqlcode/wwwroot/app/templates/main.html
@@ -4,7 +4,7 @@
         <div class="btn align-center icon-database" id="db"></div>
         <div class="btn align-center icon-search" id="search"></div>
     </div>
-    <div class="bottom">
+    <div class="bottom-btns">
         <div class="btn align-center icon-terminal" id="terminal"></div>
         <div class="btn align-center icon-menu" id="menu"></div>
     </div>
@@ -13,9 +13,9 @@
 <div class="sc-container">
     <div class="sc-left-pane" name="lpane">
         
-        <div class="panel docs-panel">scripts explorer</div>
-        <div class="panel db-panel">database explorer</div>
-        <div class="panel search-panel">search</div>
+        <div class="panel docs-panel"></div>
+        <div class="panel db-panel"></div>
+        <div class="panel search-panel"></div>
 
     </div>
 
