--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -5,8 +5,8 @@
 }
 
 html {
-  font-family: 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback';
-  font-size: 14px;
+  font-family: "-apple-system","BlinkMacSystemFont","Segoe WPC,Segoe UI","HelveticaNeue-Light","Ubuntu","Droid Sans","sans-serif";
+  font-size: 11px;
   line-height: 1.15;
   -webkit-tap-highlight-color: transparent;
 }
@@ -21,8 +21,6 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Consolas", 'Courier New', "monospace"; /*-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";*/
-  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #C5C5C5;
