--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -16,7 +16,24 @@
   grid-column: 2;
 }
 .sc-right-pane {
-  grid-column: 3
+  grid-column: 3;
+  grid-template-rows: auto 3px 100px;
+  display: grid;
+  left: 0px;
+  top: 0px;  
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+}
+
+.editor-main {
+  grid-row: 1;
+}
+.rp-split{
+  grid-row: 2;
+}
+.results-main {
+  grid-row: 3;
 }
 
 .control {
@@ -41,10 +58,9 @@
 }
 
 .noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+  -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none;
 }
