--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -10,6 +10,8 @@
   margin-right: -3px;
   position: relative;
   pointer-events: none;
+  font-family: "Consolas";
+  font-size: 12px;
 }
 .panel-title {
   margin-left: 10px;
