--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -1,4 +1,4 @@
-.sc-container {
+.container {
   position: absolute;
   grid-template-columns: 200px 3px auto;
   display: grid;
@@ -8,14 +8,14 @@
   height: 100%;
   z-index: -1;
 }
-.sc-left-pane {
+.sidebar {
   grid-column: 1;
   padding-left: 50px;
 }
-.sc-split {
+.v-split-2 {
   grid-column: 2;
 }
-.sc-right-pane {
+.workbench {
   grid-column: 3;
   grid-template-rows: auto 3px 100px;
   display: grid;
@@ -25,13 +25,13 @@
   height: 100%;
 }
 
-.editor-main {
+.editor {
   grid-row: 1;
 }
-.rp-split{
+.h-split-2 {
   grid-row: 2;
 }
-.results-main {
+.output {
   grid-row: 3;
 }
 
