--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -10,8 +10,7 @@
   margin-right: -3px;
   position: relative;
   pointer-events: none;
-  font-family: "Consolas";
-  font-size: 12px;
+  font-size: 10px;
 }
 .panel-title {
   margin-left: 10px;
@@ -23,4 +22,7 @@
   float: right;
   margin-right: 20px;
   pointer-events: initial;
+  font-size: 16px;
+  position: relative;
+  top: -5px;
 }
