--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -20,7 +20,7 @@
   grid-template-rows: auto 3px 100px;
   display: grid;
   left: 0px;
-  top: 0px;  
+  top: 0px;
   width: 100%;
   height: 100%;
 }
@@ -41,6 +41,10 @@
 }
 .splitter-h {
   cursor: ew-resize;
+  background-color: #252526;
+}
+.splitter-v {
+  cursor: ns-resize;
   background-color: #252526;
 }
 
