--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -36,3 +36,50 @@ body {
         -ms-user-select: none; 
             user-select: none;
 }
+
+.v-split-2 {
+  grid-column: 2;
+}
+.h-split-2 {
+  grid-row: 2;
+}
+
+.btn {
+  cursor: pointer;
+}
+.btn:hover {
+  color: white;
+  text-shadow: 0 0 1px
+}
+.btn.active {
+  color: white;
+  text-shadow: 0 0 1px
+}
+
+.control {
+  color: #ADADAD;
+  background-color: #333333;
+}
+.splitter-h {
+  cursor: ew-resize;
+  background-color: #252526;
+}
+.splitter-v {
+  cursor: ns-resize;
+  background-color: #252526;
+}
+
+.tabs {
+  grid-row: 1;
+  display: inline-flex;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.tabs-container {
+  grid-row: 2;
+}
+.tab {
+  padding-left: 10px;
+  padding-right: 10px;
+  cursor: pointer;
+}
