tab close buttons

--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -82,4 +82,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   cursor: pointer;
+  max-width: 300px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
