--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -32,19 +32,45 @@
 .editor-tabs {
   background-color: #252526;
 }
+.editor-tabs::-webkit-scrollbar {
+  height: 3px;
+}
+.editor-tabs::-webkit-scrollbar-track {
+  border-radius: 2px;
+  background: transparent;
+}
+.editor-tabs::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 5px #7a7a7a; 
+  border-radius: 2px;
+}
+
 .editor-tab {
-  padding-top: 10px;
   background-color: #252526;
   border-right: 1px #1E1E1E solid;
+  min-width: 140px;
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 .editor-tab .icon {
   font-size: 12px;
+  grid-column: 1;
+  padding-right: 5px;
+  padding-top: 12px;
 }
 .editor-tab .close {
   font-size: 11px;
-  margin-left: 20px;
   color: #ffffff;
   float: right;
+  grid-column: 3;
+  padding-top: 12px;
+}
+.editor-tab .title {
+  grid-column: 2;
+  min-width: 80px;
+  max-width: 300px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-top: 10px;
 }
 .editor-tab.tab-active {
   background-color: #1E1E1E;
