--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -30,7 +30,7 @@
 }
 
 .editor-tabs {
-  background-color: #252526;
+  background-color: #2525268a;
 }
 .editor-tabs::-webkit-scrollbar {
   height: 3px;
