--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -3,9 +3,10 @@
   grid-template-columns: 200px 3px auto;
   display: grid;
   left: 0px;
-  top: 0px;  
+  top: 0px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   z-index: -1;
 }
 .sidebar {
