--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -8,7 +8,6 @@ html {
   font-family: "Consolas", 'Courier New', "monospace";
   font-size: 12px;
   line-height: 1.15;
-  /*height:100%;*/
 }
 
 body {
@@ -20,7 +19,11 @@ body {
   background-color: #1E1E1E;
   font-family: sans-serif;
   font-size: 14px;
-  /*height:100%;*/
+}
+
+#loading-screen {
+  margin-top: 20%; 
+  font-size: 10em;
 }
 
 .align-center {
@@ -30,18 +33,16 @@ body {
 }
 
 .noselect {
-  -webkit-touch-callout: none; 
-    -webkit-user-select: none; 
-       -moz-user-select: none; 
-        -ms-user-select: none; 
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
             user-select: none;
 }
 
-.v-split-2 {
-  grid-column: 2;
-}
-.h-split-2 {
-  grid-row: 2;
+.control {
+  color: #ADADAD;
+  background-color: #333333;
 }
 
 .btn {
@@ -54,11 +55,6 @@ body {
 .btn.active {
   color: white;
   text-shadow: 0 0 1px
-}
-
-.control {
-  color: #ADADAD;
-  background-color: #333333;
 }
 .splitter-v {
   cursor: ew-resize;
