--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-
+    overflow: hidden;
     grid-template-columns: 50px 200px 3px auto;
     grid-template-rows: auto 20px;
     
@@ -64,8 +64,10 @@
     background-color: #252526;
     border-right: 1px #1E1E1E solid;
     min-width: 140px;
+    max-width: 400px;
     display: grid;
     grid-template-columns: auto auto auto;
+    justify-content: space-between;
 }
 .editor-tab .icon {
     font-size: 12px;
@@ -82,8 +84,6 @@
 }
 .editor-tab .title {
     grid-column: 2;
-    min-width: 80px;
-    max-width: 300px;
     overflow: hidden;
     text-overflow: ellipsis;
     padding-top: 10px;
