--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -78,7 +78,6 @@
 .editor-tab .close {
     font-size: 11px;
     color: #ffffff;
-    float: right;
     grid-column: 3;
     padding-top: 12px;
 }
@@ -87,6 +86,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding-top: 10px;
+}
+.editor-tab .title:focus {
+    border: 1px inset #3b3e41;
 }
 .editor-tab.tab-active {
     background-color: #1E1E1E;
