--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -85,11 +85,9 @@ body {
 .droptarget {
   background-color: #3b3e41 !important;
 }
-/*
-.focus {
-  border: blue 1px solid;
+.editable:focus {
+  border: 1px inset #3b3e41;
 }
-*/
 [contenteditable]:focus {
   outline: 0px solid transparent;
 }
