--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -12,6 +12,7 @@
     background-color: #1E1E1E;
     font-size: 10px;
     grid-row: 1;
+
 }
 .panel-header-b {
     display: grid; 
@@ -30,3 +31,32 @@
     padding-top: 6px;
     margin-right: 10px;
 }
+.shadow-line {
+    background-color: #1E1E1E;
+    height: 1px;
+    box-shadow: 0px 0px 8px 1px #000000;
+}
+.panel-content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.panel-item {
+    font-size: 12px;
+    padding-left: 4px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    
+}
+/*
+.panel-item-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+*/
