--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -37,7 +37,7 @@
     box-shadow: 0px 0px 8px 1px #000000;
 }
 .panel-content {
-    overflow: hidden;
+    overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
@@ -48,7 +48,7 @@
     margin-bottom: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
-    overflow: hidden;
+    overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     
