--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -51,20 +51,19 @@ body {
 button {
   cursor: pointer;
 }
-/*wtf*/
+
 button:active {
-  border-style: inset;
-  background-color: yellow;
+  border-style: inset !important;
 }
 
 button:focus {
-  outline: none;
+  outline: none !important;;
 }
-/*
+
 button:hover {
-  color: white;
+  color: white !important;;
 }
-*/
+
 .btn:hover {
   color: white;
 }
@@ -105,7 +104,4 @@ button:hover {
 }
 [contenteditable]:focus {
   outline: 0px solid transparent;
-}
-.panel-item.active {
-  background-color: #1E1E1E;
 }
