--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -15,7 +15,6 @@
     overflow-x: hidden;
     text-overflow: ellipsis;
     overflow-y: auto;
-
     position: relative;
     margin-right: -3px;
     pointer-events: none;
@@ -24,6 +23,7 @@
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
+    pointer-events: initial;
 }
 .panel-title {
     padding-left: 6px;
@@ -41,6 +41,7 @@
     padding-top: 2px;
     white-space: nowrap;
     text-overflow: ellipsis;
+    pointer-events: initial;
 }
 .panel-header button {
     border-radius: 4px;
@@ -51,20 +52,43 @@
     pointer-events: initial;
     font-size: 0.9em;
     background-color: #252526;
-    border: 1px #5f5f5f outset;
-}
-.panel-item {
-    font-size: 12px;
-    padding: 4px;
+    border: 1px #5f5f5f;
+    border-style: outset
 }
 .panel-shadow-line {
     background-color: #1E1E1E;
     box-shadow: 0px 0px 8px 1px #000000;
-    padding-bottom: 6px;
     position: relative;
+    top: 1px;
 }
 /*
 .panel-content {
   
 }
 */
+.panel-item {
+    font-size: 12px;
+    padding-left: 4px;
+    padding-right: 4px;
+    pointer-events: none; 
+}
+.panel-item > .expand {
+    pointer-events: initial; 
+    cursor: pointer;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+.panel-item > .text {
+    display: inline-block;
+    width: calc(100% - 20px);
+    pointer-events: initial; 
+    cursor: pointer;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+.panel-item.active {
+    background-color: #1E1E1E;
+}
+.panel-item.active > .text {
+    cursor: initial;
+}
