--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -16,14 +16,12 @@
     text-overflow: ellipsis;
     overflow-y: auto;
     position: relative;
-    margin-right: -3px;
-    pointer-events: none;
+    pointer-events: initial;
 }
 .panel-item {
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    pointer-events: initial;
 }
 .panel-title {
     padding-left: 6px;
@@ -42,6 +40,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     pointer-events: initial;
+    margin-right: 3px;
 }
 .panel-header button {
     border-radius: 4px;
@@ -49,7 +48,6 @@
     padding-bottom: 1px;
     padding-left: 2px;
     padding-right: 2px;
-    pointer-events: initial;
     font-size: 0.9em;
     background-color: #252526;
     border: 1px #5f5f5f;
@@ -57,38 +55,47 @@
 }
 .panel-shadow-line {
     background-color: #1E1E1E;
-    box-shadow: 0px 0px 8px 1px #000000;
+    box-shadow: 0px 0px 2px 1px #000000;
     position: relative;
-    top: 1px;
+    margin-right: 0px;
+    margin-left: 3px;
 }
-/*
-.panel-content {
-  
-}
-*/
 .panel-item {
     font-size: 12px;
     padding-left: 4px;
     padding-right: 4px;
-    pointer-events: none; 
 }
 .panel-item > .expand {
-    pointer-events: initial; 
     cursor: pointer;
     padding-top: 4px;
     padding-bottom: 4px;
 }
 .panel-item > .text {
     display: inline-block;
-    width: calc(100% - 20px);
-    pointer-events: initial; 
+    width: calc(100% - 10px);
     cursor: pointer;
     padding-top: 4px;
     padding-bottom: 4px;
 }
 .panel-item.active {
     background-color: #1E1E1E;
+    color: #fff;
 }
 .panel-item.active > .text {
     cursor: initial;
 }
+.panel-item:hover {
+    background-color: rgba(30, 30, 30, 0.425);
+}
+
+.panel-content::-webkit-scrollbar {
+    width: 6px;
+}
+.panel-content::-webkit-scrollbar-track {
+    border-radius: 2px;
+    background: transparent;
+}
+.panel-content::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 5px #7a7a7a; 
+    border-radius: 2px;
+} 
