--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -40,16 +40,17 @@
 }
 #workbench > #splitter {
     grid-row: 2;
+    position: relative;
 }
 #output {
     grid-row: 3;
+    /*position: relative;*/
 }
-/*
-.monaco-editor {
-    width: 100% !important;
-    height: 100% !important;
+.tab-content {
+    width: 100%;
+    height: 100%;
 }
-*/
+
 .results-tab {
     font-size: 10px;
 }
