--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -9,6 +9,7 @@
     position: relative;
     margin-right: -3px;
     pointer-events: none;
+    margin-bottom: 2px;
 }
 .panel-content {
     white-space: nowrap;
