--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -9,7 +9,6 @@
     position: relative;
     margin-right: -3px;
     pointer-events: none;
-    margin-bottom: 2px;
 }
 .panel-content {
     white-space: nowrap;
@@ -56,10 +55,11 @@
 }
 .panel-shadow-line {
     background-color: #1E1E1E;
-    box-shadow: 0px 0px 2px 1px #000000;
+    box-shadow: 0px 0px 1px 1px #000000;
     position: relative;
     margin-right: 0px;
     margin-left: 3px;
+    margin-top: 2px;
 }
 .panel-item {
     font-size: 12px;
