--- a/src/sqlcode/wwwroot/css/main.css
+++ b/src/sqlcode/wwwroot/css/main.css
@@ -40,7 +40,7 @@
 }
 #workbench > #splitter {
     grid-row: 2;
-    position: relative;
+    /*position: relative;*/
 }
 #output {
     grid-row: 3;
