--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -6,9 +6,9 @@
     background-color: #1E1E1E;
     font-size: 10px;
     height: 40px;
-    position: relative;
+    /*position: relative;*/
     margin-right: -3px;
-    pointer-events: none;
+    /*pointer-events: none;*/
 }
 .panel-content {
     white-space: nowrap;
@@ -16,7 +16,7 @@
     text-overflow: ellipsis;
     overflow-y: auto;
     position: relative;
-    pointer-events: initial;
+    /*pointer-events: initial;*/
 }
 .panel-item {
     white-space: nowrap;
@@ -40,7 +40,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     pointer-events: initial;
-    margin-right: 3px;
+    /*margin-right: 3px;*/
 }
 .panel-header button {
     border-radius: 4px;
@@ -51,7 +51,7 @@
     font-size: 0.9em;
     background-color: #252526;
     border: 1px #5f5f5f;
-    border-style: outset
+    border-style: solid
 }
 .panel-shadow-line {
     background-color: #1E1E1E;
@@ -84,6 +84,7 @@
 .panel-item.active {
     background-color: #1E1E1E;
     color: #fff;
+    z-index: 10;
 }
 .panel-item.active > .text {
     cursor: initial;
@@ -102,4 +103,4 @@
 .panel-content::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 5px #7a7a7a; 
     border-radius: 2px;
-} 
+}
