--- a/src/sqlcode/wwwroot/css/editor-tabs.css
+++ b/src/sqlcode/wwwroot/css/editor-tabs.css
@@ -48,7 +48,10 @@
 }
 .editor-tab .title[contenteditable=true] {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+
 }
 
 .editor-tab.sticky .title {
