--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -56,7 +56,7 @@ button:active {
   border-style: inset !important;
 }
 
-button:focus {
+button:focus, input:focus {
   outline: none !important;
 }
 div:focus {
@@ -107,10 +107,15 @@ button:hover {
 }
 .editable:focus {
   border: 1px inset #3b3e41;
+  border-radius: 4px;
 }
 [contenteditable]:focus {
   outline: 0px solid transparent;
 }
 .editable.invalid {
+  padding-left: 2px;
   border: 1px red dotted;
+}
+.selected {
+  background-color: #225075;
 }
