pixel perfect on all browsers

--- a/src/sqlcode/wwwroot/css/default.css
+++ b/src/sqlcode/wwwroot/css/default.css
@@ -93,6 +93,8 @@ button:hover {
 .tabs-container {
   grid-row: 2;
   margin-top: 1px;
+  margin-right: 1px;
+  margin-bottom: 1px;
 }
 .tab {
   padding-left: 10px;
