--- a/src/sqlcode/wwwroot/css/panels.css
+++ b/src/sqlcode/wwwroot/css/panels.css
@@ -6,9 +6,7 @@
     background-color: #1E1E1E;
     font-size: 10px;
     height: 40px;
-    /*position: relative;*/
     margin-right: -3px;
-    /*pointer-events: none;*/
 }
 .panel-content {
     white-space: nowrap;
@@ -16,7 +14,7 @@
     text-overflow: ellipsis;
     overflow-y: auto;
     position: relative;
-    /*pointer-events: initial;*/
+    padding: 1px;
 }
 .panel-item {
     white-space: nowrap;
@@ -36,11 +34,9 @@
 }
 .panel-commands {
     padding-left: 6px;
-    padding-top: 2px;
-    white-space: nowrap;
     text-overflow: ellipsis;
     pointer-events: initial;
-    /*margin-right: 3px;*/
+    margin-top: -1px;
 }
 .panel-header button {
     border-radius: 4px;
@@ -84,19 +80,20 @@
     padding-bottom: 4px;
 }
 .panel-item > .text {
-    display: inline-block;
-    width: calc(100% - 10px);
     cursor: pointer;
     padding-top: 4px;
     padding-bottom: 4px;
+    width: 100%;
+    display: inline-flex;
+    width: calc(100% - 14px);
 }
 .panel-item-title {
     padding: 2px;
+    width: 100%;
 }
 .panel-item.active {
     background-color: #1E1E1E;
     color: #fff;
-    z-index: 10;
 }
 .panel-item.active > .text {
     cursor: initial;
