add script repo module

--- a/src/sqlcode/wwwroot/css/editor-tabs.css
+++ b/src/sqlcode/wwwroot/css/editor-tabs.css
@@ -59,6 +59,7 @@
     background-color: #1E1E1E;
     color: #fff;
     margin: 1px;
+    font-weight: 600;
 }
 .editor-tab.tab-inactive .close {
     visibility: hidden;
